<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_screen4">

    <ImageView
        android:id="@+id/imageView15"
        android:layout_width="364dp"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="0dp"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/tr_w" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="35dp"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="27dp"
        android:background="@color/enb"
        android:fontFamily="@font/comfortaa"
        android:text="@string/slide4_tt"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_alignStart="@+id/textView2"
        android:layout_alignLeft="@+id/textView2"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="0dp"
        android:background="@color/enb"
        android:fontFamily="@font/comfortaa"
        android:text="@string/slide4_tts"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="110dp"
        android:fontFamily="@font/courgette"
        android:text="@string/slide4_pt1"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="50sp" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView9"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="180dp"
        android:fontFamily="@font/courgette"
        android:text="@string/slide4_pt2"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="50sp" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView9"
        android:layout_alignParentTop="true"
        android:layout_marginStart="-1dp"
        android:layout_marginTop="250dp"
        android:fontFamily="@font/courgette"
        android:text="@string/slide4_pt3"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="50sp" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView9"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="320dp"
        android:fontFamily="@font/courgette"
        android:text="@string/slide4_pt4"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="50sp" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView9"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"

        android:layout_marginTop="390dp"
        android:fontFamily="@font/courgette"
        android:text="@string/slide4_pt5"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="50sp" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="74dp"
        android:layout_marginLeft="74dp"
        android:layout_marginTop="127dp"
        android:fontFamily="@font/comfortaa"
        android:text="@string/slide4_pt1_descr"
        android:textSize="13sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView14"
        android:layout_alignTop="@+id/textView10"
        android:layout_marginStart="0dp"
        android:layout_marginTop="18dp"
        android:fontFamily="@font/comfortaa"
        android:text="@string/slide4_pt2_descr"
        android:textSize="13sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView14"
        android:layout_alignTop="@+id/textView11"
        android:layout_marginStart="-1dp"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/comfortaa"
        android:text="@string/slide4_pt3_descr"
        android:textSize="13sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="307dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView14"
        android:layout_alignParentTop="true"
        android:layout_marginStart="1dp"
        android:layout_marginTop="330dp"
        android:fontFamily="@font/comfortaa"
        android:text="@string/slide4_pt4_descr"
        android:textSize="13sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView14"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="409dp"
        android:fontFamily="@font/comfortaa"
        android:text="@string/slide4_pt5_descr"
        android:textSize="13sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button2"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="127dp"
        android:layout_marginLeft="127dp"
        android:layout_marginEnd="127dp"
        android:layout_marginRight="127dp"
        android:layout_marginBottom="29dp"
        android:background="@drawable/round_corner_white"
        android:fontFamily="@font/amaticscregular"
        android:onClick="next"
        android:text="@string/slide4_button"
        android:textAllCaps="true"
        android:textSize="25sp"
        android:textStyle="bold" />
</RelativeLayout>
