<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.DonateFragment"
    android:background="@color/colorOrange">

    <!-- TODO: Update blank fragment layout -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="0dp"
            android:paddingEnd="20dp"
            android:src="@drawable/tr_w" />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="146dp"
            android:layout_height="49dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="25dp"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="73dp"
            android:background="@drawable/background_splash"
            android:ems="10"
            android:fontFamily="@font/comfortaa"
            android:hint="@string/donate_sum"
            android:inputType="number"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:textSize="14sp" />

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="155dp"
            android:layout_height="56dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="70dp"
            android:padding="3dp"
            android:paddingStart="3dp"
            android:paddingEnd="3dp"
            android:paddingBottom="3dp"
            android:scaleType="fitXY"
            android:src="@drawable/input_donate" />

        <TextView
            android:id="@+id/textView27"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="36dp"
            android:layout_marginLeft="36dp"
            android:layout_marginTop="100dp"
            android:background="@color/colorBottomNavigationActiveColored"
            android:fontFamily="@font/comfortaa"
            android:gravity="left|start"
            android:text="@string/donate_descr3"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView26"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="35dp"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="80dp"
            android:background="@color/colorBottomNavigationActiveColored"
            android:fontFamily="@font/comfortaa"
            android:text="@string/donate_descr2"
            android:textAllCaps="false"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView25"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView24"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginStart="35dp"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="-3dp"
            android:background="@color/colorBottomNavigationActiveColored"
            android:fontFamily="@font/comfortaa"
            android:gravity="left|start"
            android:text="@string/donate_descr1"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="35dp"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="38dp"
            android:background="@color/colorBottomNavigationActiveColored"
            android:fontFamily="@font/comfortaa"
            android:text="@string/donate_descr"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView28"
            android:layout_width="29dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="151dp"
            android:fontFamily="@font/courgette"
            android:text="@string/slide4_pt1"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"
            android:textSize="50sp" />

        <TextView
            android:id="@+id/textView29"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="75dp"
            android:layout_marginLeft="75dp"
            android:layout_marginTop="165dp"
            android:fontFamily="@font/comfortaa"
            android:text="@string/donate_descr_pt1"
            android:textAllCaps="true"
            android:textSize="13sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView30"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="31dp"
            android:layout_marginLeft="31dp"
            android:layout_marginTop="260dp"
            android:fontFamily="@font/courgette"
            android:text="@string/slide4_pt2"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"
            android:textSize="50sp" />

        <TextView
            android:id="@+id/textView31"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="79dp"
            android:layout_marginLeft="79dp"
            android:layout_marginTop="280dp"
            android:fontFamily="@font/comfortaa"
            android:text="@string/donate_descr_pt2"
            android:textSize="13sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView32"
            android:layout_width="43dp"
            android:layout_height="70dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="374dp"
            android:fontFamily="@font/courgette"
            android:text="@string/slide4_pt3"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"
            android:textSize="50sp" />

        <TextView
            android:id="@+id/textView33"
            android:layout_width="276dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="79dp"
            android:layout_marginLeft="79dp"
            android:layout_marginTop="386dp"
            android:fontFamily="@font/comfortaa"
            android:text="@string/donate_descr_pt3"
            android:textSize="14sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/editText2"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="40dp"
            android:background="@color/colorOrange"
            android:fontFamily="@font/amaticscregular"
            android:text="@string/donate_button"
            android:textSize="25sp"
            android:textStyle="bold" />

    </RelativeLayout>
</FrameLayout>