<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView22"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="0dp"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/sb_6" />

    <TextView
        android:id="@+id/textView43"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="489dp"
        android:background="@color/colorBottomNavigationActiveColored"
        android:fontFamily="@font/comfortaa"
        android:text="@string/info_6"
        android:textAllCaps="true"
        android:textColor="@color/slider_color"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView44"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView43"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="0dp"
        android:background="@color/colorBottomNavigationActiveColored"
        android:fontFamily="@font/comfortaa"
        android:text="@string/info_61"
        android:textAllCaps="true"
        android:textColor="@color/slider_color"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView45"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView44"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="0dp"
        android:background="@color/colorBottomNavigationActiveColored"
        android:fontFamily="@font/comfortaa"
        android:text="@string/info_62"
        android:textAllCaps="true"
        android:textColor="@color/slider_color"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView46"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView45"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-1dp"
        android:background="@color/colorBottomNavigationActiveColored"
        android:fontFamily="@font/comfortaa"
        android:text="@string/info_63"
        android:textAllCaps="true"
        android:textColor="@color/slider_color"
        android:textSize="16sp"
        android:textStyle="bold" />

</RelativeLayout>